--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <script src="https://unpkg.com/three"></script>
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
     <script
             src="https://unpkg.com/three@0.146.0/examples/js/loaders/GLTFLoader.js"
     ></script>
